--- a/src/VipbJsonTool/VipbJsonTool.csproj
+++ b/src/VipbJsonTool/VipbJsonTool.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
 
     <!-- single‑file, self‑contained -->
     <PublishSingleFile>true</PublishSingleFile>
