feat: alias patch commands

--- a/src/VipbJsonTool/VipbJsonTool.csproj
+++ b/src/VipbJsonTool/VipbJsonTool.csproj
@@ -13,4 +13,7 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
+  </ItemGroup>
 </Project>
