--- a/.vipb-alias-map.yml
+++ b/.vipb-alias-map.yml
@@ -1,17 +1,10 @@
 schema_version: 1
 aliases:
-  # ------------------------------------------------------------------
-  # BASIC  (already single‑value paths)
-  # ------------------------------------------------------------------
-  company_name:             .Library_General_Settings.Company_Name.__text
+  company_name:             .Library_General_Settings.Company_Name
   build_info:               .Library_General_Settings.Library_Version
   package_filename:         .Library_General_Settings.Package_File_Name
   description:              .Advanced_Settings.Description.Description
   display_icon:             .Library_General_Settings.Package_Icon
-
-  # ------------------------------------------------------------------
-  # DESTINATIONS  (every child node under <Destinations>)
-  # ------------------------------------------------------------------
   dest_toolkit_vis:         .Advanced_Settings.Destinations.Toolkit_VIs
   dest_examples:            .Advanced_Settings.Destinations.Examples
   dest_custom_probes:       .Advanced_Settings.Destinations.Custom_Probes
@@ -24,26 +17,14 @@ aliases:
   dest_project_templates:   .Advanced_Settings.Destinations.Project_Templates
   dest_project_provider:    .Advanced_Settings.Destinations.Project_Provider
   dest_quickdrop_plugins:   .Advanced_Settings.Destinations.QuickDrop_Plugins
-  dest_additional:          .Advanced_Settings.Destinations.Additional_Destination   # array
-
-  # ------------------------------------------------------------------
-  # SOURCE FILE SETTINGS  (major collections)
-  # ------------------------------------------------------------------
-  src_destination_overrides: .Advanced_Settings.Source_Files.Destination_Overrides   # array
-  src_password_overrides:    .Advanced_Settings.Source_Files.Password_Overrides      # array
-  src_namespace_overrides:   .Advanced_Settings.Source_Files.Namespace_Overrides     # array
-  src_exclusions:            .Advanced_Settings.Source_Files.Exclusions              # array
-  src_compile_exclusions:    .Advanced_Settings.Source_Files.Compile_Exclusions      # array
-  src_place_folder_contents: .Advanced_Settings.Source_Files.Place_Folder_Contents   # array
-
-  # ------------------------------------------------------------------
-  # PACKAGE DEPENDENCIES
-  # ------------------------------------------------------------------
-  package_dependencies:      .Advanced_Settings.Package_Dependencies                 # array
-
-  # ------------------------------------------------------------------
-  # INSTALL REQUIREMENTS  (individual Boolean flags)
-  # ------------------------------------------------------------------
+  dest_additional:          .Advanced_Settings.Destinations.Additional_Destination
+  src_destination_overrides: .Advanced_Settings.Source_Files.Destination_Overrides
+  src_password_overrides:    .Advanced_Settings.Source_Files.Password_Overrides
+  src_namespace_overrides:   .Advanced_Settings.Source_Files.Namespace_Overrides
+  src_exclusions:            .Advanced_Settings.Source_Files.Exclusions
+  src_compile_exclusions:    .Advanced_Settings.Source_Files.Compile_Exclusions
+  src_place_folder_contents: .Advanced_Settings.Source_Files.Place_Folder_Contents
+  package_dependencies:      .Advanced_Settings.Package_Dependencies
   req_all_windows:           .Advanced_Settings.Install_Requirements.All_Windows
   req_windows_7:             .Advanced_Settings.Install_Requirements.Windows_7
   req_windows_vista:         .Advanced_Settings.Install_Requirements.Windows_Vista
@@ -57,10 +38,6 @@ aliases:
   req_os_64bit:              .Advanced_Settings.Install_Requirements."OS_64-Bit"
   req_lv_32bit:              .Advanced_Settings.Install_Requirements."LV_32-Bit"
   req_lv_64bit:              .Advanced_Settings.Install_Requirements."LV_64-Bit"
-
-  # ------------------------------------------------------------------
-  # CUSTOM ACTIONS & BUILD SCRIPTS
-  # ------------------------------------------------------------------
   ca_pre_build_vi:           .Advanced_Settings.Custom_Action_VIs.Pre-Build_VI
   ca_post_build_vi:          .Advanced_Settings.Custom_Action_VIs.Post-Build_VI
   ca_pre_install_vi:         .Advanced_Settings.Custom_Action_VIs.Pre-Install_VI
