--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup .NET 8
+      - name: Setup .NET 8
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
@@ -19,25 +19,23 @@ jobs:
       - name: Restore & build
         run: dotnet build src/VipbJsonTool/VipbJsonTool.csproj -c Release
 
-      - name: Publish self-contained single file (linux-x64)
+      - name: Publish self‑contained single file (linux‑x64)
         run: dotnet publish src/VipbJsonTool -c Release -r linux-x64 --self-contained -o publish/linux-x64-singlefile
 
-      - name: Prepare roundtrip files for deep patch test
+      # ---------- prepare round‑trip files for deep patch test ----------
+      - name: Generate round‑trip artefacts
         shell: pwsh
         run: |
-          dotnet run --project src/VipbJsonTool -- vipb2json "tests/Samples/NI Icon editor.vipb" tmp.json
+          dotnet run --project src/VipbJsonTool -- vipb2json 'tests/Samples/NI Icon editor.vipb' tmp.json
           dotnet run --project src/VipbJsonTool -- patch2vipb tmp.json tmp.vipb ci-patch.yml '' ''
           dotnet run --project src/VipbJsonTool -- vipb2json tmp.vipb tmp2.json
 
-      - name: Install required PowerShell modules
+      # ---------- tests ----------
+      - name: Run Pester tests
         shell: pwsh
         run: |
           Install-Module Pester -Force -Scope CurrentUser
           Install-Module PowerShell.Yaml -Force -Scope CurrentUser
-
-      - name: Unit tests (PowerShell)
-        shell: pwsh
-        run: |
           Invoke-Pester tests -CI
           Invoke-Pester tests/RoundTrip.Deep.Tests.ps1
 
