--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,9 @@ jobs:
           mkdir -p $pkg
           Add-Type -AssemblyName 'System.IO.Compression.FileSystem'
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $pkg)
-          Import-Module (Resolve-Path "$pkg/tools/PowerShell.Yaml.psm1")
-          Write-Host "PowerShell.Yaml imported successfully"
-
+          $psm1 = Get-ChildItem -Recurse -Filter PowerShell.Yaml.psm1 -Path $pkg | Select-Object -First 1
+          Import-Module $psm1.FullName
+          Write-Host "PowerShell.Yaml imported from $($psm1.FullName)"
 
       - name: Run Pester tests
         shell: pwsh
