--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,13 @@ jobs:
           New-Item -ItemType Directory -Force -Path $dest | Out-Null
           Add-Type -AssemblyName 'System.IO.Compression.FileSystem'
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $dest)
-          $psm1 = Get-ChildItem -Recurse -Filter PowerShell.Yaml.psm1 -Path $dest | Select-Object -ExpandProperty FullName -First 1
-          if (-not $psm1) { Write-Error "PowerShell.Yaml.psm1 not found in $dest after extraction!"; exit 1 }
+          $psm1 = Join-Path $dest "tools/PowerShell.Yaml.psm1"
+          if (-not (Test-Path $psm1)) {
+            Write-Host "File listing for $dest:"
+            Get-ChildItem -Recurse $dest | Write-Host
+            Write-Error "PowerShell.Yaml.psm1 not found at $psm1 after extraction!"
+            exit 1
+          }
           Import-Module $psm1 -Force
           Write-Host "PowerShell.Yaml imported from $psm1"
 
