--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $dest)
           $psm1 = Join-Path $dest "tools/PowerShell.Yaml.psm1"
           if (-not (Test-Path $psm1)) {
-            Write-Host "File listing for $dest:"
-            Get-ChildItem -Recurse $dest | Write-Host
+            Write-Host "File listing for ${dest}:"
+            Get-ChildItem -Recurse $dest | ForEach-Object { Write-Host $_.FullName }
             Write-Error "PowerShell.Yaml.psm1 not found at $psm1 after extraction!"
             exit 1
           }
