--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           dotnet run --project src/VipbJsonTool -- vipb2json "tests/Samples/NI Icon editor.vipb" tmp.json
 
           # 2. Enumerate every JSON path into a text file
-          .\tools\Enumerate-VipbPaths.ps1 tmp.json | Out-File -Encoding utf8 all-paths.txt
+          ./tools/Enumerate-VipbPaths.ps1 tmp.json | Out-File -Encoding utf8 all-paths.txt
 
           # 3. Build a full-coverage patch touching every path
           $yaml = @(
