--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,15 +44,12 @@ jobs:
             Out-File -Encoding utf8 all-paths.txt
 
           # 3. Build a full-coverage patch touching every path
-          $yaml = @(
-            'schema_version: 1'
-            'patch:'
-          )
+          $yaml = @()
           foreach ($p in Get-Content all-paths.txt) {
             if ($p -match '\[\d+\]')       { $yaml += "  $($p): '__ARRAY__'" }
-            elseif ($p -match '@')         { $yaml += "  $($p): 'TEST'"       }
-            elseif ($p -in 'true','false') { $yaml += "  $($p): true"         }
-            else                           { $yaml += "  $($p): 'TEST'"       }
+            elseif ($p -match '@')            { $yaml += "  $($p): 'TEST'"       }
+            elseif ($p -in 'true','false')    { $yaml += "  $($p): true"         }
+            else                              { $yaml += "  $($p): 'TEST'"       }
           }
           $yaml | Out-File ci-patch-full.yml -Encoding utf8
 
@@ -68,8 +65,7 @@ jobs:
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $dest)
           $psm1 = Join-Path $dest 'powershell-yaml.psm1'
           if (-not (Test-Path $psm1)) {
-            Write-Host "Contents of $($dest):"
-            Get-ChildItem -Recurse $dest
+            Write-Host "Contents of $dest:"; Get-ChildItem -Recurse $dest
             throw "couldn't find $psm1"
           }
           Import-Module $psm1 -Force
