--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,15 @@ jobs:
             Out-File -Encoding utf8 all-paths.txt
 
           # 3. Build a full-coverage patch touching every path
-          $yaml = @()
+          $yaml = @(
+            'schema_version: 1'
+            'patch:'
+          )
           foreach ($p in Get-Content all-paths.txt) {
             if ($p -match '\[\d+\]')       { $yaml += "  $($p): '__ARRAY__'" }
-            elseif ($p -match '@')            { $yaml += "  $($p): 'TEST'"       }
-            elseif ($p -in 'true','false')    { $yaml += "  $($p): true"         }
-            else                              { $yaml += "  $($p): 'TEST'"       }
+            elseif ($p -match '@')         { $yaml += "  $($p): 'TEST'"       }
+            elseif ($p -in 'true','false') { $yaml += "  $($p): true"         }
+            else                           { $yaml += "  $($p): 'TEST'"       }
           }
           $yaml | Out-File ci-patch-full.yml -Encoding utf8
 
@@ -63,9 +66,11 @@ jobs:
           New-Item -ItemType Directory -Force -Path $dest | Out-Null
           Add-Type -AssemblyName 'System.IO.Compression.FileSystem'
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $dest)
+
           $psm1 = Join-Path $dest 'powershell-yaml.psm1'
           if (-not (Test-Path $psm1)) {
-            Write-Host "Contents of $dest:"; Get-ChildItem -Recurse $dest
+            Write-Host "Contents of $($dest):"
+            Get-ChildItem -Recurse $dest
             throw "couldn't find $psm1"
           }
           Import-Module $psm1 -Force
