--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
         shell: pwsh
         working-directory: ${{ github.workspace }}
         run: |
+          # debug: make sure tools/ exists
+          Write-Host "=== workspace contents ==="
+          Get-ChildItem -Recurse
+
           # 1. VIPB → JSON
           dotnet run --project src/VipbJsonTool -- vipb2json "tests/Samples/NI Icon editor.vipb" tmp.json
 
@@ -39,14 +43,26 @@ jobs:
           pwsh -NoProfile -ExecutionPolicy Bypass -File ./tools/Enumerate-VipbPaths.ps1 tmp.json |
             Out-File -Encoding utf8 all-paths.txt
 
-          # 3. Build a full‐coverage patch (flat alias→value map)
-          $out = foreach ($p in Get-Content all-paths.txt) {
-            if ($p -match '\[\d+\]')       { "$p: '__ARRAY__'" }
-            elseif ($p -match '@')         { "$p: 'TEST'"       }
-            elseif ($p -in 'true','false') { "$p: true"         }
-            else                           { "$p: 'TEST'"       }
+          # 3. Build a full-coverage patch touching every path
+          $yaml = @(
+            'schema_version: 1'
+            'patch:'
+          )
+          foreach ($p in Get-Content all-paths.txt) {
+            if ($p -match '\[\d+\]') {
+              $yaml += "  $($p): '__ARRAY__'"
+            }
+            elseif ($p -match '@') {
+              $yaml += "  $($p): 'TEST'"
+            }
+            elseif ($p -in 'true','false') {
+              $yaml += "  $($p): true"
+            }
+            else {
+              $yaml += "  $($p): 'TEST'"
+            }
           }
-          $out | Out-File ci-patch-full.yml -Encoding utf8
+          $yaml | Out-File ci-patch-full.yml -Encoding utf8
 
       - name: Prepare PowerShell.Yaml for deep test
         shell: pwsh
@@ -58,11 +74,9 @@ jobs:
           New-Item -ItemType Directory -Force -Path $dest | Out-Null
           Add-Type -AssemblyName 'System.IO.Compression.FileSystem'
           [IO.Compression.ZipFile]::ExtractToDirectory("$pkg.$ver.nupkg", $dest)
-
           $psm1 = Join-Path $dest 'powershell-yaml.psm1'
           if (-not (Test-Path $psm1)) {
-            Write-Host "Contents of $($dest):"
-            Get-ChildItem -Recurse $dest
+            Write-Host "Contents of $dest:"; Get-ChildItem -Recurse $dest
             throw "couldn't find $psm1"
           }
           Import-Module $psm1 -Force
